fixed context menu overflow ui issue

--- a/frontend/src/modules/editor/contentObject/less/editorPageBlock.less
+++ b/frontend/src/modules/editor/contentObject/less/editorPageBlock.less
@@ -31,3 +31,7 @@
         top: 0;
     }
 }
+
+.expanded-context-menu {
+    z-index: 9999;
+}
