--- a/frontend/src/modules/projects/less/projects.less
+++ b/frontend/src/modules/projects/less/projects.less
@@ -4,6 +4,8 @@
 
 .projects {
   ul {
+    display: flex;
+    flex-flow: wrap;
     list-style-type: none;
   }
   li {
@@ -44,7 +46,7 @@ ul.projects-options {
         min-width: 200px;
         min-height: 341px;
         width: 22%;
-        max-width:300px;
+        max-width:200px;
         display:inline-block;
         .project-image {
             width:100%;
